20040323 input.c,joystick.[ch],settings.dat,ui/gtk/{gtkinternal.h,
	 gtkjoystick.c,gtkui.c}: first bits of code allowing emulation of
	 multiple joystick types.
20040324 joystick.[ch],ui/gtk/gtkjoystick.c: generalise the joystick
	 selection code.
20040324 joystick.[ch]: start merging the Timex joystick emulation into
	 the new scheme of things.
20040325 input.c,joystick.[ch],ui/sdl/{sdljoystick.c,sdlkeyboard.c},
	 widget/menu_data.c: make the SDL joystick code use the new input
	 layer; also a couple of SDL compilation fixes.
20040325 sound.c: use 16 bits when mixing sound samples (patch #911525)
	 (Stuart Brady).
20040325 event.c,ui/uijoystick.[ch]: make the libjsw code use the new
	 input layer.
20040325 ui/uijoystick.c: fix up the 'no joystick' code for the new input
	 layer.
20040327 input.[ch], rzx.c, ui/uijoystick.c, ui/sdl/sdljoystick.c: make
	 the 'real joystick' code actually use the input layer.
20040328 compat.h,configure.in,compat/{Makefile.am,dirname.c}: add dirname
	 replacement.
20040329 fuse.c,settings.dat,sound.[ch],man/fuse.1,sound/osssound.c,
	 ui/options.dat: full 16-bit sound code (Rus).
20040329 ui/sdl/sdljoystick.c: compilation fixes.
20040329 sound/sdlsound.c: change to 16-bit sound.
20040329 sound/sdlsound.c: make 8-bit sound work again.
20040331 Move the machine-specific files into the machines/ directory.
20040331 widget/{menu.c,menu_data.c}: fix up for the machines/ changes.
20040331 ui/gtk/gtkjoystick.c: improve user interface.
20040401 ui/gtk/{gtkinternals.h,gtkjoystick.c,gtkui.c},widget/{Makefile.am,
	 joystick.c,menu_data.c,widget.c,widget.h,widget_internals.h}:
	 add widget code to select joysticks and match up the GTK+
	 interface.
20040401 input.c,joystick.[ch],widget/{Makefile.am,joystick.c,menu.c,
	 menu_data.c,scaler.c,select.c,widget.[ch],widget_internals.h}:
	 replace the three 'select' widgets (machine, scaler, joystick)
	 with one generalised one.
20040401 machine.c,machines/: general tidy-up of the machines/ directory.