@@ -35,6 +35,7 @@ int pentagon_init( fuse_machine_info *machine );
 int spec16_init( fuse_machine_info *machine );
 int specplus2_init( fuse_machine_info *machine );
 int specplus2a_init( fuse_machine_info *machine );
+int specplus3e_init( fuse_machine_info *machine );
 int tc2048_init( fuse_machine_info *machine );
 int tc2068_init( fuse_machine_info *machine );
 
